--- a/config/config.json
+++ b/config/config.json
@@ -2,6 +2,6 @@
   "deprecationDate": "2025-04-10T12:00:00",
   "paymentDueDate": "2027-04-16",
   "bannerActive": true,
-  "ribbonMessage": "Pre-release",
-  "showRibbon": false
+  "ribbonMessage": "Standby",
+  "showRibbon": true
 }
