--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
-  "deprecationDate": "2025-04-10T12:00:00",
+  "deprecationDate": "2026-01-01T12:00:00",
   "paymentDueDate": "2025-04-05",
   "bannerActive": true,
   "ribbonMessage": "Standby",
-  "showRibbon": true
+  "showRibbon": false
 }
