--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
-    "node-fetch": "^2.7.0",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^17.2.3",
+    "node-fetch": "^2.7.0"
   },
   "engines": {
     "node": ">=18.0.0"
